--- a/demo1/src/main/resources/com/example/demo1/avtor.css
+++ b/demo1/src/main/resources/com/example/demo1/avtor.css
@@ -1,5 +1,5 @@
 .fon{
-    -fx-background-image: url(fon_avtoriz.png);
+    -fx-background-image: url(../pic/fon_avtoriz.png);
     -fx-background-position: center center;
 }
 .fild{
@@ -13,7 +13,7 @@
 }
 
 .fonOb{
-    -fx-background-image: url(fonn.PNG);
+    -fx-background-image: url(../pic/fonn.PNG);
     -fx-background-position: center center;
     -fx-background-size: 1200 800;
 }
@@ -30,30 +30,61 @@
     -fx-background-radius:10 10 10 10 ;
 }
 .izmenen{
-    -fx-background-image: url(izmen.png);
+    -fx-background-image: url(../pic/izmen.png);
     -fx-background-position: center center;
     -fx-background-size: 30 30;
     -fx-background-repeat: no-repeat ;
     -fx-background-radius:10 10 10 10 ;
 }
 .dobavl{
-    -fx-background-image: url(dob.png);
+    -fx-background-image: url(../pic/dob.png);
     -fx-background-position: center center;
     -fx-background-size: 30 30;
     -fx-background-repeat: no-repeat ;
     -fx-background-radius:10 10 10 10 ;
 }
 .obn{
-    -fx-background-image: url(obn.png);
+    -fx-background-image: url(../pic/obn.png);
     -fx-background-position: center center;
     -fx-background-size: 30 30;
     -fx-background-repeat: no-repeat ;
     -fx-background-radius:10 10 10 10 ;
 }
 .ydol{
-    -fx-background-image: url(close-icon.jpg);
+    -fx-background-image: url(../pic/close-icon.jpg);
     -fx-background-position: center center;
     -fx-background-size: 30 30;
     -fx-background-repeat: no-repeat ;
     -fx-background-radius:10 10 10 10 ;
+}
+
+.opacity{
+    -fx-background-color:D9D9D9;
+    -fx-background-position: center center;
+    -fx-background-radius: 50;
+    /*-fx-background-color: linear-gradient(-fx-opacity 50%, D9D9D9);*/
+}
+
+.regForm{
+    -fx-background-image: url(../pic/regForm.PNG);
+    -fx-background-position: center center;
+}
+
+.fild2{
+    -fx-background-color: d9d9d9;
+    -fx-background-radius:50;
+    -fx-font-color: bbbbbb;
+    -fx-opacity: 80%;
+}
+.butt_kod{
+    -fx-background-image: url(../pic/butt.png);
+    -fx-background-position: center center;
+    -fx-background-size: 90 60;
+    -fx-background-repeat: no-repeat ;
+}
+
+.form_osn{
+    -fx-background-image: url(../pic/form_osn.PNG);
+    -fx-background-position: center center;
+    -fx-background-size: 1200 800;
 }
