--- a/demo1/src/main/resources/com/example/demo1/avtor.css
+++ b/demo1/src/main/resources/com/example/demo1/avtor.css
@@ -88,3 +88,23 @@
     -fx-background-position: center center;
     -fx-background-size: 1200 800;
 }
+
+.modal_dob_fon{
+    -fx-background-radius:50 ;
+    -fx-background-color: d0bc9f;
+    /*-fx-background-image: url(../pic/modal_dobav.png);
+    -fx-background-position: center center;
+    -fx-background-repeat: no-repeat ;*/
+    -fx-background-size: 450 250;
+}
+.modal_dob_fon2{
+    -fx-background-radius:50 ;
+    -fx-background-color: e9e5d9;
+    -fx-background-position: center center;
+    -fx-background-repeat: no-repeat ;
+    -fx-background-size: 400 200;
+}
+.button_modal_v{
+    -fx-background-color: d0bc9f;
+    -fx-background-radius: 0 0 35 35;
+}
