--- a/demo1/src/main/resources/com/example/demo1/tabl_cli.fxml
+++ b/demo1/src/main/resources/com/example/demo1/tabl_cli.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-radius: 30;" styleClass="fonOb" stylesheets="@avtor.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.MainController">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-radius: 30;" styleClass="form_osn" stylesheets="@avtor.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.MainController">
    <children>
       <Button fx:id="Orders" layoutX="450.0" layoutY="71.0" mnemonicParsing="false" onAction="#Clik_Orders" prefHeight="45.0" prefWidth="123.0" styleClass="button_razdel" text="Заказы" textFill="#615050">
          <font>
@@ -48,13 +47,12 @@
       </TextField>
       <AnchorPane layoutX="79.0" layoutY="159.0" opacity="0.85" prefHeight="550.0" prefWidth="618.0" styleClass="table">
          <children>
-            <ScrollBar layoutX="597.0" layoutY="1.0" orientation="VERTICAL" prefHeight="568.0" prefWidth="21.0" />
-            <TableView layoutY="-22.0" prefHeight="592.0" prefWidth="599.0" styleClass="table">
+            <TableView layoutY="-22.0" prefHeight="592.0" prefWidth="716.0" styleClass="table">
               <columns>
-                <TableColumn prefWidth="72.0" text="Арт" />
-                <TableColumn prefWidth="190.0" text="Название" />
-                  <TableColumn prefWidth="194.0" text="Автор" />
-                  <TableColumn minWidth="9.0" prefWidth="142.0" text="Жанр" />
+                <TableColumn prefWidth="92.0" text="Арт" />
+                <TableColumn prefWidth="230.0" text="Название магазина" />
+                  <TableColumn prefWidth="212.0" text="Адрес" />
+                  <TableColumn minWidth="9.0" prefWidth="161.0" text="Номер телефона" />
               </columns>
             </TableView>
          </children>
@@ -63,7 +61,6 @@
       <Button layoutX="900.0" layoutY="176.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="izmenen" />
       <Button layoutX="900.0" layoutY="270.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="ydol" />
       <Button layoutX="900.0" layoutY="223.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="obn" />
-      <PieChart layoutX="819.0" layoutY="403.0" prefHeight="315.0" prefWidth="327.0" title="Соотношение книг по автору" />
       <Button fx:id="CreatAkk" layoutX="869.0" layoutY="355.0" mnemonicParsing="false" onAction="#Butt_CreatAkk" prefHeight="28.0" prefWidth="277.0" styleClass="opacity" stylesheets="@avtor.css" text="Создать аккаунт . . .">
          <font>
             <Font name="Candara Bold" size="15.0" />
@@ -85,5 +82,6 @@
             </LinearGradient>
          </textFill>
       </Button>
+      <ScrollBar layoutX="774.0" layoutY="161.0" orientation="VERTICAL" prefHeight="568.0" prefWidth="21.0" />
    </children>
 </AnchorPane>
