--- a/demo1/src/main/resources/com/example/demo1/tabl_or.fxml
+++ b/demo1/src/main/resources/com/example/demo1/tabl_or.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-radius: 30;" styleClass="fonOb" stylesheets="@avtor.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.MainController">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-radius: 30;" styleClass="form_osn" stylesheets="@avtor.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.MainController">
    <children>
       <Button fx:id="Orders" layoutX="450.0" layoutY="71.0" mnemonicParsing="false" onAction="#Clik_Orders" prefHeight="45.0" prefWidth="123.0" styleClass="button_razdel" text="Заказы" textFill="#615050">
          <font>
@@ -52,9 +51,10 @@
             <TableView layoutY="-22.0" prefHeight="592.0" prefWidth="599.0" styleClass="table">
               <columns>
                 <TableColumn prefWidth="72.0" text="Арт" />
-                <TableColumn prefWidth="190.0" text="Название" />
-                  <TableColumn prefWidth="194.0" text="Автор" />
-                  <TableColumn minWidth="9.0" prefWidth="142.0" text="Жанр" />
+                <TableColumn prefWidth="136.0" text="id Заказчика" />
+                  <TableColumn prefWidth="115.0" text="id Книги" />
+                  <TableColumn minWidth="9.0" prefWidth="133.0" text="Дата заказа" />
+                  <TableColumn prefWidth="142.0" text="Количество копий" />
               </columns>
             </TableView>
          </children>
@@ -63,7 +63,6 @@
       <Button layoutX="900.0" layoutY="176.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="izmenen" />
       <Button layoutX="900.0" layoutY="270.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="ydol" />
       <Button layoutX="900.0" layoutY="223.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="obn" />
-      <PieChart layoutX="819.0" layoutY="403.0" prefHeight="315.0" prefWidth="327.0" title="Соотношение книг по автору" />
       <Button fx:id="CreatAkk" layoutX="869.0" layoutY="355.0" mnemonicParsing="false" onAction="#Butt_CreatAkk" prefHeight="28.0" prefWidth="277.0" styleClass="opacity" stylesheets="@avtor.css" text="Создать аккаунт . . .">
          <font>
             <Font name="Candara Bold" size="15.0" />
