--- a/demo1/src/main/resources/com/example/demo1/tabl_av.fxml
+++ b/demo1/src/main/resources/com/example/demo1/tabl_av.fxml
@@ -56,7 +56,7 @@
             </TableView>
          </children>
       </AnchorPane>
-      <Button fx:id="dobavit" layoutX="900.0" layoutY="129.0" mnemonicParsing="false" onAction="#Butt_dob" prefHeight="40.0" prefWidth="39.0" styleClass="dobavl" />
+      <Button fx:id="dobavit" layoutX="900.0" layoutY="129.0" mnemonicParsing="false" onAction="#showDialog" prefHeight="40.0" prefWidth="39.0" styleClass="dobavl" />
       <Button layoutX="900.0" layoutY="176.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="izmenen" />
       <Button layoutX="900.0" layoutY="270.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="ydol" />
       <Button layoutX="900.0" layoutY="223.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="obn" />
