--- a/demo1/src/main/resources/com/example/demo1/win_dob.fxml
+++ b/demo1/src/main/resources/com/example/demo1/win_dob.fxml
@@ -41,9 +41,14 @@
             <Line endX="100.0" layoutX="236.0" layoutY="83.0" startX="-100.0" />
             <Line endX="100.0" layoutX="236.0" layoutY="116.0" startX="-100.0" />
             <Line endX="100.0" layoutX="236.0" layoutY="150.0" startX="-100.0" />
-            <TextField focusTraversable="false" layoutX="135.0" layoutY="58.0" prefHeight="25.0" prefWidth="201.0" />
-            <TextField focusTraversable="false" layoutX="136.0" layoutY="94.0" prefHeight="25.0" prefWidth="201.0" />
-            <TextField focusTraversable="false" layoutX="136.0" layoutY="128.0" prefHeight="25.0" prefWidth="201.0" />
+            <TextField focusTraversable="false" layoutX="135.0" layoutY="60.0" prefHeight="25.0" prefWidth="208.0" />
+            <TextField focusTraversable="false" layoutX="135.0" layoutY="93.0" prefHeight="25.0" prefWidth="208.0" />
+            <TextField focusTraversable="false" layoutX="135.0" layoutY="128.0" prefHeight="25.0" prefWidth="208.0" />
+            <Button layoutX="157.0" layoutY="180.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" text="Добавить" textFill="#8d7979">
+               <font>
+                  <Font name="Franklin Gothic Medium" size="16.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
