--- a/demo1/src/main/resources/com/example/demo1/win_izmen_or.fxml
+++ b/demo1/src/main/resources/com/example/demo1/win_izmen_or.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="250.0" prefWidth="450.0" styleClass="modal_dob_fon" stylesheets="@avtor.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.MainController">
@@ -18,37 +18,42 @@
                   <Image url="@../pic/logo.png" />
                </image>
             </ImageView>
-            <Button layoutX="35.0" layoutY="-6.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" styleClass="button_modal_v" text="Добавить" textFill="#8d7979">
+            <Button layoutX="35.0" layoutY="-6.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" styleClass="button_modal_v" text="Изменить" textFill="#8d7979">
                <font>
                   <Font name="Franklin Gothic Medium" size="16.0" />
                </font>
             </Button>
-            <Label layoutX="49.0" layoutY="63.0" text="Название" textFill="#8d7979">
+            <Label layoutX="45.0" layoutY="50.0" text="Заказчик" textFill="#8d7979">
                <font>
                   <Font name="Franklin Gothic Medium" size="16.0" />
                </font>
             </Label>
-            <Label layoutX="49.0" layoutY="97.0" text="Автор" textFill="#8d7979">
+            <Label layoutX="45.0" layoutY="84.0" text="Книга" textFill="#8d7979">
                <font>
                   <Font name="Franklin Gothic Medium" size="16.0" />
                </font>
             </Label>
-            <Label layoutX="49.0" layoutY="131.0" text="Жанр" textFill="#8d7979">
+            <Label layoutX="45.0" layoutY="118.0" text="Дата заказа" textFill="#8d7979">
                <font>
                   <Font name="Franklin Gothic Medium" size="16.0" />
                </font>
             </Label>
-            <Line endX="100.0" layoutX="236.0" layoutY="83.0" startX="-100.0" />
-            <Line endX="100.0" layoutX="236.0" layoutY="116.0" startX="-100.0" />
-            <Line endX="100.0" layoutX="236.0" layoutY="150.0" startX="-100.0" />
-            <TextField focusTraversable="false" layoutX="135.0" layoutY="60.0" prefHeight="25.0" prefWidth="208.0" />
-            <TextField focusTraversable="false" layoutX="135.0" layoutY="93.0" prefHeight="25.0" prefWidth="208.0" />
-            <TextField focusTraversable="false" layoutX="135.0" layoutY="128.0" prefHeight="25.0" prefWidth="208.0" />
-            <Button layoutX="157.0" layoutY="180.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" text="Добавить" textFill="#8d7979">
+            <TextField focusTraversable="false" layoutX="192.0" layoutY="43.0" prefHeight="25.0" prefWidth="208.0" />
+            <TextField focusTraversable="false" layoutX="192.0" layoutY="76.0" prefHeight="25.0" prefWidth="208.0" />
+            <TextField focusTraversable="false" layoutX="192.0" layoutY="111.0" prefHeight="25.0" prefWidth="208.0" />
+            <Button layoutX="157.0" layoutY="180.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-radius: 10;" text="Изменить" textFill="#8d7979">
                <font>
                   <Font name="Franklin Gothic Medium" size="16.0" />
                </font>
             </Button>
+            <Label layoutX="45.0" layoutY="153.0" text="Количество копий" textFill="#8d7979">
+               <font>
+                  <Font name="Franklin Gothic Medium" size="16.0" />
+               </font>
+            </Label>
+            <TextField focusTraversable="false" layoutX="192.0" layoutY="146.0" prefHeight="25.0" prefWidth="208.0" />
+            <ChoiceBox layoutX="192.0" layoutY="43.0" prefHeight="25.0" prefWidth="208.0" style="-fx-background-color: fffff;" />
+            <ChoiceBox layoutX="192.0" layoutY="76.0" prefHeight="25.0" prefWidth="208.0" style="-fx-background-color: fffff;" />
          </children>
       </AnchorPane>
    </children>
