--- a/demo1/src/main/resources/com/example/demo1/tabl_av.fxml
+++ b/demo1/src/main/resources/com/example/demo1/tabl_av.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -48,12 +47,7 @@
       <AnchorPane layoutX="79.0" layoutY="159.0" opacity="0.85" prefHeight="550.0" prefWidth="618.0" styleClass="table">
          <children>
             <ScrollBar layoutX="597.0" layoutY="1.0" orientation="VERTICAL" prefHeight="568.0" prefWidth="21.0" />
-            <TableView layoutY="-22.0" prefHeight="592.0" prefWidth="599.0" styleClass="table">
-              <columns>
-                <TableColumn prefWidth="131.0" text="Арт" />
-                <TableColumn prefWidth="467.0" text="Фамилия / Имя / Отчество автора" />
-              </columns>
-            </TableView>
+            <TableView fx:id="tabl_avt" layoutY="-22.0" prefHeight="592.0" prefWidth="599.0" styleClass="table" />
          </children>
       </AnchorPane>
       <Button fx:id="dobavit" layoutX="900.0" layoutY="129.0" mnemonicParsing="false" onAction="#showDialogAvtor" prefHeight="40.0" prefWidth="39.0" styleClass="dobavl" />
