--- a/demo1/src/main/resources/com/example/demo1/tabl_or.fxml
+++ b/demo1/src/main/resources/com/example/demo1/tabl_or.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -47,16 +45,7 @@
       </TextField>
       <AnchorPane layoutX="79.0" layoutY="159.0" opacity="0.85" prefHeight="550.0" prefWidth="618.0" styleClass="table">
          <children>
-            <ScrollBar layoutX="597.0" layoutY="1.0" orientation="VERTICAL" prefHeight="568.0" prefWidth="21.0" />
-            <TableView layoutY="-22.0" prefHeight="592.0" prefWidth="599.0" styleClass="table">
-              <columns>
-                <TableColumn prefWidth="72.0" text="Арт" />
-                <TableColumn prefWidth="136.0" text="id Заказчика" />
-                  <TableColumn prefWidth="115.0" text="id Книги" />
-                  <TableColumn minWidth="9.0" prefWidth="133.0" text="Дата заказа" />
-                  <TableColumn prefWidth="142.0" text="Количество копий" />
-              </columns>
-            </TableView>
+            <TableView fx:id="tabl_or" layoutY="-22.0" prefHeight="592.0" prefWidth="618.0" styleClass="table" />
          </children>
       </AnchorPane>
       <Button layoutX="900.0" layoutY="129.0" mnemonicParsing="false" onAction="#showDialogOr" prefHeight="40.0" prefWidth="39.0" styleClass="dobavl" />
