--- a/demo1/src/main/resources/com/example/demo1/tabl_book.fxml
+++ b/demo1/src/main/resources/com/example/demo1/tabl_book.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -48,15 +46,7 @@
       </TextField>
       <AnchorPane layoutX="79.0" layoutY="159.0" opacity="0.85" prefHeight="550.0" prefWidth="618.0" styleClass="table">
          <children>
-            <ScrollBar layoutX="597.0" layoutY="1.0" orientation="VERTICAL" prefHeight="568.0" prefWidth="21.0" />
-            <TableView layoutY="-22.0" prefHeight="592.0" prefWidth="599.0" styleClass="table">
-              <columns>
-                <TableColumn prefWidth="72.0" text="Арт" />
-                <TableColumn prefWidth="190.0" text="Название" />
-                  <TableColumn prefWidth="194.0" text="Автор" />
-                  <TableColumn minWidth="9.0" prefWidth="142.0" text="Жанр" />
-              </columns>
-            </TableView>
+            <TableView fx:id="tabl_book" layoutY="-22.0" prefHeight="592.0" prefWidth="618.0" styleClass="table" />
          </children>
       </AnchorPane>
       <Button layoutX="900.0" layoutY="129.0" mnemonicParsing="false" onAction="#showDialogBook" prefHeight="40.0" prefWidth="39.0" styleClass="dobavl" />
