--- a/demo1/src/main/resources/com/example/demo1/win_dob_gan.fxml
+++ b/demo1/src/main/resources/com/example/demo1/win_dob_gan.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="250.0" prefWidth="450.0" styleClass="modal_dob_fon" stylesheets="@avtor.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.MainController">
+<AnchorPane prefHeight="250.0" prefWidth="450.0" styleClass="modal_dob_fon" stylesheets="@avtor.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.add_Gan">
    <children>
       <AnchorPane layoutX="7.0" layoutY="7.0" prefHeight="234.0" prefWidth="435.0" styleClass="modal_dob_fon2" stylesheets="@avtor.css">
          <children>
@@ -27,8 +27,8 @@
                   <Font name="Franklin Gothic Medium" size="16.0" />
                </font>
             </Label>
-            <TextField focusTraversable="false" layoutX="182.0" layoutY="95.0" prefHeight="25.0" prefWidth="208.0" />
-            <Button layoutX="157.0" layoutY="180.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="121.0" style="-fx-background-radius: 10;" text="Добавить" textFill="#8d7979">
+            <TextField fx:id="text_add_GAN" focusTraversable="false" layoutX="182.0" layoutY="95.0" prefHeight="25.0" prefWidth="208.0" />
+            <Button fx:id="add_GAN" layoutX="157.0" layoutY="180.0" mnemonicParsing="false" onAction="#Butt_add_GAN" prefHeight="40.0" prefWidth="121.0" style="-fx-background-radius: 10;" text="Добавить" textFill="#8d7979">
                <font>
                   <Font name="Franklin Gothic Medium" size="16.0" />
                </font>
