--- a/demo1/src/main/resources/com/example/demo1/tabl_book.fxml
+++ b/demo1/src/main/resources/com/example/demo1/tabl_book.fxml
@@ -51,7 +51,7 @@
       </AnchorPane>
       <Button layoutX="900.0" layoutY="129.0" mnemonicParsing="false" onAction="#showDialogBook" prefHeight="40.0" prefWidth="39.0" styleClass="dobavl" />
       <Button layoutX="900.0" layoutY="176.0" mnemonicParsing="false" onAction="#IzmenDialogBook" prefHeight="40.0" prefWidth="39.0" styleClass="izmenen" />
-      <Button layoutX="900.0" layoutY="270.0" mnemonicParsing="false" onAction="#DeleteDialogBook" prefHeight="40.0" prefWidth="39.0" styleClass="ydol" />
+      <Button layoutX="900.0" layoutY="270.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="ydol" />
       <Button layoutX="900.0" layoutY="223.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="39.0" styleClass="obn" />
       <PieChart layoutX="819.0" layoutY="403.0" prefHeight="315.0" prefWidth="327.0" title="Соотношение книг по автору" />
       <Button fx:id="CreatAkk" layoutX="869.0" layoutY="355.0" mnemonicParsing="false" onAction="#Butt_CreatAkk" prefHeight="28.0" prefWidth="277.0" styleClass="opacity" stylesheets="@avtor.css" text="Создать аккаунт . . .">
